--- a/styles/Colors.scss
+++ b/styles/Colors.scss
@@ -2,3 +2,4 @@
                     COLORS
 =================================================*/
 $backgroundColor: linear-gradient(180deg, #2D1D35 0%, #16171E 100%);
+$orange: #FF715B;
