--- a/styles/MainPage.module.scss
+++ b/styles/MainPage.module.scss
@@ -10,16 +10,32 @@
 
 .navigation {
     position: relative;
-    display: flex;
+    /*     display: flex;
     align-items: center;
+    justify-content: space-between; */
+    //flex-direction: column;
+
     //background-color: green;
     //height: 26px;
-    justify-content: space-between;
+
+
+    &__logoAndMenuContainer {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 13px;
+        height: 26px;
+    }
 }
 
 .logoContainer {
     display: flex;
     align-items: center;
+
+    &--disableContainer {
+        display: none;
+    }
 
     &__logo {
         position: relative;
@@ -36,9 +52,44 @@
     }
 }
 
-.menu {
+.menuContainer {
     display: flex;
     align-items: center;
+
+    &--searchOpened {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    &__searchIcon,
+    &__mainMenu,
+    &__closeSearch {
+        cursor: pointer;
+    }
+
+    &__searchInput {
+
+        /*  border: none;
+        background-image: none;
+        background-color: transparent;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none; */
+        all: unset;
+        //width: 199px;
+        width: 70.57%;
+
+        font-family: Rasa;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 22px;
+        line-height: 27px;
+        /* identical to box height */
+
+        text-align: center;
+
+        border-bottom: 1px solid #FFFFFF;
+    }
 
     &__mainMenu {
         margin-left: 22px;
@@ -51,3 +102,55 @@
         } */
     }
 }
+
+.toggleFiltersContainer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 13px;
+    height: 22px;
+
+    &__informationAndIconContainer {
+        display: inherit;
+        align-items: inherit;
+        cursor: pointer;
+    }
+
+    &__information {
+        font-family: $fontOpenSans;
+        font-weight: 400;
+        font-size: 16px;
+    }
+
+    &__filterIcon {
+        margin-left: 7px;
+        cursor: pointer;
+    }
+}
+
+.filtersContainer {
+    margin-bottom: 13px;
+}
+
+
+/* .react-select__value-container {
+    background: red;
+}
+
+.react-select__control {
+    background: red;
+}
+
+.react-select__value-container--is-multi {}
+
+.react-select__menu {
+    height: 100vh;
+} */
+
+/* .filtersContainer {
+    display: none;
+
+    &--filtersOpened {
+        display: flex;
+    }
+} */
