Overall update of project

--- a/styles/Colors.scss
+++ b/styles/Colors.scss
@@ -3,3 +3,4 @@
 =================================================*/
 $backgroundColor: linear-gradient(180deg, #2D1D35 0%, #16171E 100%);
 $orange: #FF715B;
+$orangeLight: #f4b15d;
