--- a/styles/Resolutions.scss
+++ b/styles/Resolutions.scss
@@ -13,3 +13,12 @@ $bp-smaller-landscapeWidth: 35.5em; //568px
 $bp-small-landscapeWidth: 64em; //1024px
 $bp-medium-landscapeWidth: 96em; //1536px
 $bp-large-landscapeWidth: 160em; //2560px
+
+/* Resolutions (tablet, laptop, desktop) */
+
+$mobile: 20em; //320px
+$tablet: 47.3125em; //757px
+$laptop: 61.1875em; //979px
+$desktop: 75em; //1200px
+$desktopMedium: 96em; // 1536px
+$desktopLarge: 160em; // 2560px
