--- a/styles/MainPage.module.scss
+++ b/styles/MainPage.module.scss
@@ -1,156 +1,148 @@
 @import './Mixins.scss';
 @import './Fonts.scss';
 @import './Colors.scss';
+@import './Resolutions.scss';
 
 .container {
-    //background-color: yellow;
-    font-family: $fontRasa;
-    padding: 30px 19px;
-}
-
-.navigation {
     position: relative;
-    /*     display: flex;
-    align-items: center;
-    justify-content: space-between; */
-    //flex-direction: column;
-
-    //background-color: green;
-    //height: 26px;
-
-
-    &__logoAndMenuContainer {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-bottom: 13px;
-        height: 26px;
-    }
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 3rem 1.9rem;
+    font-family: $fontRasa;
+    overflow-x: hidden;
 }
 
-.logoContainer {
-    display: flex;
-    align-items: center;
+.main {
+    flex-grow: 1;
+    position: relative;
+    padding-top: 7.1vh;
 
-    &--disableContainer {
-        display: none;
-    }
-
-    &__logo {
-        position: relative;
-        bottom: 8px;
-        margin-right: 22px;
-
-    }
-
-    &__logoName {
-        position: relative;
-        font-size: 28px;
-        font-style: normal;
-        font-weight: 400;
-    }
-}
-
-.menuContainer {
-    display: flex;
-    align-items: center;
-
-    &--searchOpened {
+    &__noDrinks {
         width: 100%;
-        justify-content: space-between;
-    }
-
-    &__searchIcon,
-    &__mainMenu,
-    &__closeSearch {
-        cursor: pointer;
-    }
-
-    &__searchInput {
-
-        /*  border: none;
-        background-image: none;
-        background-color: transparent;
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none; */
-        all: unset;
-        //width: 199px;
-        width: 70.57%;
-
-        font-family: Rasa;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 22px;
-        line-height: 27px;
-        /* identical to box height */
-
         text-align: center;
+        font-family: $fontRasa;
+        font-style: normal;
+        font-weight: normal;
 
-        border-bottom: 1px solid #FFFFFF;
-    }
+        @include font-sizePortrait(2.7, 3.5);
 
-    &__mainMenu {
-        margin-left: 22px;
-
-        /*         width: 20px;
-        height: 10px; */
-        /*         &:hover {
-            filter: invert(60%) sepia(40%) saturate(3716%) hue-rotate(324deg) brightness(104%) contrast(101%);
-            filter: invert(56%) sepia(76%) saturate(440%) hue-rotate(130deg) brightness(93%) contrast(99%);
-        } */
+        @include universalLandscape() {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            @include font-sizeLandscape(3.4, 3.7);
+        }
     }
 }
 
-.toggleFiltersContainer {
+.drinksHeading {
+    margin: 2.3rem 0;
+    margin-bottom: 6rem;
+    font-family: $fontRasa;
+    text-align: center;
+    @include mainHeadingFontSize();
+    &::first-letter {
+        color: $orange;
+    }
+}
+
+.drinksContainer {
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(auto-fill, minmax(19.7vh, 1fr));
+    gap: 3rem;
+
+    @media screen and (min-width: 403px) { 
+        grid-auto-rows: minmax(206px, 1fr);
+    }
+}
+
+.drinkFinderContainer {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-bottom: 13px;
-    height: 22px;
+    position: relative;
+    width: 100%;
+    padding-bottom: 3.1vh;
 
-    &__informationAndIconContainer {
-        display: inherit;
-        align-items: inherit;
-        cursor: pointer;
+    &:before {
+        content: '';
+        display: block;
+        width: 100vw;
+        height: 100%;
+        position: absolute;
+        top:0;
+        left:50%;
+        transform: translateX(-50%);
+        box-shadow: 0px 2px 3px rgba(0,0,0,0.3);
     }
 
-    &__information {
-        font-family: $fontOpenSans;
+    &__icon {
+        display: none;
+        position: relative;
+        top: 1.5rem;
+
+        @media (min-width: #{$tablet}){
+            display: initial;
+        }
+    }
+}
+
+.searchAndFiltersContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+
+    @media (min-width: #{$tablet}){
+        width: 70.57%;
+    }
+
+    @include universalLandscape() {
+        flex-direction: row;
+    }
+
+    &__searchContainer {
+        height: 4.9rem;
+    }
+
+    &__searchContainer,
+    &__filtersContainer {
+        width: 100%;
+    }
+
+    &__searchContainer {
+        margin-bottom: 1.5rem;
+
+        @include universalLandscape() {
+            margin-right: 1rem;
+            margin-bottom: 0rem;
+        }  
+    }
+
+    &__filtersContainer {
+        @include universalLandscape() {
+            margin-left: 1rem;
+        }  
+    }
+    
+    &__searchInput {
+        all: unset;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        font-family: $fontRasa;
+        font-size: 2.2rem;
         font-weight: 400;
-        font-size: 16px;
+        text-align: center;
+    
+        color:white;
+        border: none;
+        background-color: #00000045;
+
+        &::placeholder {
+            color: #777777;
+            font-size: 1.6rem;
+        }
     }
-
-    &__filterIcon {
-        margin-left: 7px;
-        cursor: pointer;
-    }
 }
-
-.filtersContainer {
-    margin-bottom: 13px;
-}
-
-
-/* .react-select__value-container {
-    background: red;
-}
-
-.react-select__control {
-    background: red;
-}
-
-.react-select__value-container--is-multi {}
-
-.react-select__menu {
-    height: 100vh;
-} */
-
-/* .filtersContainer {
-    display: none;
-
-    &--filtersOpened {
-        display: flex;
-    }
-} */
