--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,25 +1,7 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Rasa:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&display=swap'); */
-
-/* 
-    font-family: 'Open Sans', sans-serif;
-
-    font-family: 'Rasa', serif;
-*/
-
-/* 
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Rasa:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet"> 
-
-*/
-
 @import './Resolutions.scss';
 @import './Mixins.scss';
 @import './Fonts.scss';
 @import './Colors.scss';
-
-//@import './MainPage.scss';
 
 *,
 *::before,
@@ -50,23 +32,26 @@ body {
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  //position: fixed; //- wyelminowanie bialego miejsca na dole strony podczas przewijania na telefonie overflow: auto;
-  overflow: auto;
   color: white;
 }
-
 
 div#root {
   height: 100%;
 }
 
+#__next {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
 .react-select-container {
-  font-family: $fontOpenSans;
+  background-color: #00000045;
+  font-family: $fontRasa !important;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
 }
 
 .react-select__value-container {
@@ -74,14 +59,63 @@ div#root {
 }
 
 .react-select__placeholder {
-  color: white !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 100% !important;
+  color: #777777 !important;
+  text-align: center !important;
+  font-size: 1.6rem !important;
+}
+
+.react-select__input {
+  color: white;
+  font-family: $fontRasa !important;
+  font-weight: 400;
+}
+
+#react-select-long-value-select-input {
+  font-family: $fontRasa !important;
+  font-size: 2.2rem !important;
+}
+
+#react-select-single-value-select-input {
+  width: 100% !important;
+  font-family: $fontRasa !important;
+  font-size: 2.2rem !important;
+  text-align: center;
 }
 
 .react-select__control {
   background: none !important;
   border: none !important;
   border-radius: 0 !important;
-  border-bottom: 1px solid white !important;
+  padding: .5rem .5rem !important;
+}
+
+.react-select__single-value {
+  color: white !important;
+  height: 25px !important;
+  font-size: 2.2rem !important;
+  top: unset !important;
+  transform: translateX(-50%) !important;
+}
+
+#single-value-select {
+  .css-b8ldur-Input {
+    width: 100%;
+  }
+
+  .react-select__input {
+    display: flex !important;
+    justify-content: center;
+  }
+  .react-select__value-container {
+    justify-content: center !important;
+  }
+  .react-select__indicators {
+    z-index: 1;
+    justify-content: flex-end;
+  }
 }
 
 .react-select__multi-value {
@@ -91,16 +125,18 @@ div#root {
 
 .react-select__multi-value__label {
   color: white !important;
-  font-family: $fontOpenSans;
+  font-family: $fontRasa !important;
   font-weight: 400;
-  /*   font-size: 9px !important;
-  line-height: 12px !important; */
-  /*   width: 56.32px;
-  height: 18.32px; */
+  font-size: 1.6rem !important;
 }
 
 .react-select__multi-value__remove {
   cursor: pointer;
+}
+
+.css-tj5bde-Svg {
+  width: 2rem;
+  height: 2rem;
 }
 
 .react-select__indicator {
@@ -117,8 +153,20 @@ div#root {
 }
 
 .react-select__menu {
-  border: 1px solid white;
+  box-shadow: 0 0 0 1px white !important;
   background: $backgroundColor !important;
+  margin-top: 1.3rem !important;
+  border-radius: 0 !important;
+  font-family: $fontOpenSans !important;
+  font-size: 1.6rem !important;
+}
+
+.react-select__menu-list {
+  padding: 0 !important;
+}
+
+.react-select__menu-notice--no-options {
+  color: inherit !important;
 }
 
 .react-select__option {
@@ -128,34 +176,17 @@ div#root {
     background-color: $orange !important;
   }
 
+  &--is-selected {
+    background-color: transparent !important;
+  }
+
   &:hover {
     background-color: $orange !important;
   }
 
 }
 
-
-/* html,
-body,
-body>div:first-child,
-div#__next,
-div#__next>div {
-  height: 100%;
-} */
-
-/* html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+#react-select-single-value-select-input {
+  opacity: 1 !important;
+  text-transform: capitalize;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-} */
